--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="logo.png" class="logo">
+            <img src="logo2.png" class="logo">
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Reveal</a></li>
                 <li><a href="#">Registry</a></li>
+                <li><a href="#">About Us</a></li>
             </ul>
         </div>
+        
+        <div class="Content">
+            <h1>Welcome to our gender reveal for Baby Bread!</h1>
+            <p>Click on Reveal to go through the steps of finding out what we are having.<br>If you alreay know and would like to go to our baby registry click on Registry</p>
+            <div>
+                <button type="button"><span></span>Next Page</button>
+            </div>
+        </div>
+             
     </div>
 </body>
 </html>
