--- a/page 3.html
+++ b/page 3.html
@@ -14,8 +14,8 @@
             </ul>
         </div>    
             <div class="Content">
-                    <h1>Welcome to our gender reveal for Baby Bread!</h1>
-                    <p>Click on Reveal to go through the steps of finding out what we are having.<br>If you alreay know and would like to go to our baby registry click on Registry</p>
+                    <h1>Hangman!</h1>
+                    <p>Play this game of hangman to reveal the answer</p>
                     </div>
             <div>
                 <center><iframe src="https://trinket.io/embed/python/6823ea5cfa?outputOnly=true&start=result" width="20%" height="40%" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe></center>
