--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-    <title> Welcome to our gender reveal for Baby Bread!</title>
+    <title> Baby Bread</title>
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="logo2.png" class="logo">
+            <img src="logo3.png" class="logo">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Registry</a></li>
@@ -16,7 +16,7 @@
         
         <div class="Content">
             <h1>Welcome to our gender reveal for Baby Bread!</h1>
-            <p>Click on Reveal to go through the steps of finding out what we are having.<br>If you alreay know and would like to go to our baby registry click on Registry</p>
+            <p>Click next page to go to continue in the reveal</p>
             <div>
                 <button type="button"><span></span>Next Page</button>
             </div>
