--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
         <div class="navbar">
             <img src="logo3.png" class="logo">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Registry</a></li>
                 <li><a href="#">About Us</a></li>
             </ul>
         </div>
         
         <div class="Content">
-            <h1>Welcome to our gender reveal for Baby Bread!</h1>
+            <h1>Welcome to the gender reveal <br> for Baby Bread!</h1>
             <p>Click next page to go to continue in the reveal</p>
             <div>
-                <button type="button"><span></span>Next Page</button>
+                <a href="gender-guess.html"><button type="button"><span></span>Next Page</button></a>
             </div>
         </div>
              
