--- a/page 3.html
+++ b/page 3.html
@@ -1,14 +1,14 @@
 <html>
     <head>
       <title>Baby Bread</title>
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="page%203.css">
     </head>
 <body>
     <div class="Banner">
         <div class="navbar">
             <img src="logo3.png" class="logo">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Registry</a></li>
                 <li><a href="#">About Us</a></li>
             </ul>
