--- a/gender-guess.html
+++ b/gender-guess.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Make your guess!</title>
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
@@ -11,8 +12,8 @@
             <img src="baguette.png" class="logo">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Registry</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="registry.html">Registry</a></li>
+                <li><a href="about-us.html">About Us</a></li>
             </ul>
         </div>
         
@@ -103,7 +104,7 @@
     </div>
   </div>
     </div>
-    <div class="row">
+    <div class="row" style="margin-bottom: 25px">
   <div class="column">
       <button type="button" class="collapsibleB">Husband's Weight Gain</button>
     	<div class="contentB">
@@ -162,15 +163,10 @@ for (i = 0; i < coll.length; i++) {
   });
 }
 </script>
- 
-<div class = "picture">
-<h2>This is Baby Bread on March 23, 2023.</h2>    
-<img align = "left" src="breadprofile.jpg">
-</div>
         
 
 <!-- Google form for people's guesses -->
-<div><center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf_FWBtglx81g-GinGzCqVgjqh66VnxEpTLX3KVRJEAALQGzA/viewform?embedded=true" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
+<div><center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf_FWBtglx81g-GinGzCqVgjqh66VnxEpTLX3KVRJEAALQGzA/viewform?embedded=true" width="1000" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></center>
 </div>
 
 <div class="content2"> 
