--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
             <img src="logo3.png" class="logo">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Registry</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="registry.html">Registry</a></li>
+                <li><a href="about-us.html">About Us</a></li>
             </ul>
         </div>
         
         <div class="Content">
-            <h1>Welcome to the gender reveal <br> for Baby Bread!</h1>
-            <p>Click next page to go to continue in the reveal</p>
+            <h1>Welcome to our gender reveal <br style="font:times new roman"> for Baby Bread!</h1>
+            <p>We hope you're as excited to find out as we were. <br> Click the button to continue!</p>
             <div>
                 <a href="gender-guess.html"><button type="button"><span></span>Next Page</button></a>
             </div>
