--- a/page 3.html
+++ b/page 3.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      <title>Baby Bread</title>
+      <title>The Reveal</title>
     <link rel="stylesheet" href="page%203.css">
     </head>
 <body>
@@ -9,20 +9,20 @@
             <img src="logo3.png" class="logo">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Registry</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="registry.html">Registry</a></li>
+                <li><a href="about-us.html">About Us</a></li>
             </ul>
         </div>    
             <div class="Content">
-                    <h1>Hangman!</h1>
-                    <p>Play this game of hangman to reveal the answer</p>
+                    <h1>Time to find out!</h1>
+                    <h3>Play this game of hangman to reveal the gender of our little baby.</h3>
                     </div>
             <div>
-                <center><iframe src="https://trinket.io/embed/python/6823ea5cfa?outputOnly=true&start=result" width="20%" height="40%" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe></center>
+                <center><iframe src="https://trinket.io/embed/python/2496490755?outputOnly=true&start=result" width="40%" height="50%" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe></center>
             </div>
         <div class="content">
          <div>
-                <center><button type="button"><span></span>Next Page</button></center>
+             <center><a href="registry.html"><button type="button"><span></span>Next Page</button></a></center>
         </div>
         </div>
     </div>
